# mod_gnutls

./: .dir-locals.el  .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG  Makefile.am  Makefile.in  NEWS  NOTICE  README  README.ENV  README.md  aclocal.m4  autogen.sh  build_module.sh  config.in  configure  configure.ac  libgnutls.m4  meson.build  meson.options  run_tests.sh
.github/: dependabot.yaml
.theia/: settings.json
data/: Makefile.am  Makefile.in
debian/: README.Debian  changelog  clean  control  copyright  (+15 more)
doc/: .gitignore  Makefile.am  Makefile.in  doxygen.conf.in  meson.build  mod_gnutls.whatis  mod_gnutls_manual.md  mod_gnutls_manual.mdwn  mod_gnutls_manual.yaml.in  style.css
src/: Makefile.am  Makefile.in  gnutls_cache.c  gnutls_cache.h  gnutls_config.c  gnutls_config.h  gnutls_hooks.c  gnutls_io.c  gnutls_io.h  gnutls_lua.c  gnutls_ocsp.c  gnutls_ocsp.h  gnutls_proxy.c  gnutls_proxy.h  gnutls_sni.c  gnutls_sni.h  gnutls_util.c  gnutls_util.h  gnutls_watchdog.c  gnutls_watchdog.h  meson.build  mod_gnutls.c
test/: .gitignore  Makefile.am  Makefile.in  README  README.md  TestMakefile  apache_service.bash  authority.template.in  base_apache.conf  cert_helper.c  cert_helper.h  cgi_module.conf  check_test_ips.py  client.template.in  client.uid  common.bash  doctest-mgstest.py  gen_ocsp_index.c  gnutls_openpgp_support.c  https-test-client.py  imposter.uid  meson.build  mime.types  netns_py.bash  newtest  ocsp-responder.template  ocsp_server.conf  ocsp_server.conf.in  pgpcrc.c  proxy_backend.bash  proxy_backend.conf  proxy_backend.conf.in  proxy_mods.conf  required-modules.py  rogueca.template  rogueca.uid.in  runtest.py  runtests  sample_fail.yml  sample_test.yml  (+47 more)
test/apache-conf/: .gitignore  early_sni.conf.in  listen-conf.py  listen.conf.in  meson.build  netns.conf  netns.conf.in  required-modules.py
test/authority/: uid.in
test/authority/client/: template.in
test/authority/client-eku-server/: template.in
test/authority/imposter/: template.in
test/authority/meow.test/: template.in
test/authority/ocsp-responder/: template
test/authority/server/: template.in
test/authority/subca/: template.in
test/authority/subca/ocsp-responder/: template  template.in
test/authority/subca/server/: template.in
test/data/: dump.cgi  ocsp.cgi  ocsp.py
test/data/secret/: mirror.cgi  mirror.py
test/mgstest/: __init__.py  hooks.py  http.py  ocsp.py  services.py  softhsm.py  test_tests.py  tests.py  valgrind.py
test/rogueca/rogueclient/: template.in
test/server/: crl.template
test/tests/: Makefile.am  Makefile.in
test/tests/00_basic/: apache.conf
test/tests/01_priorities_config/: apache.conf  test.yml
test/tests/01_serverwide_priorities/: apache.conf
test/tests/02_cache_in_vhost/: apache.conf  test.yml
test/tests/03_cachetimeout_in_vhost/: apache.conf
test/tests/04_basic_nosni/: apache.conf  gnutls-cli.args
test/tests/04_name_based_vhosts/: apache.conf  test.yaml
test/tests/05_client_handshake_error/: apache.conf  test.yaml
test/tests/05_mismatched-priorities/: apache.conf  gnutls-cli.args  input  test.yml
test/tests/06_invalid_plaintext/: apache.conf  hooks.py
test/tests/06_verify_sni_a/: apache.conf
test/tests/07_verify_sni_b/: apache.conf  gnutls-cli.args  test.yaml
test/tests/08_verify_no_sni_fallback_to_first_vhost/: apache.conf  gnutls-cli.args  test.yaml
test/tests/09_verify_no_sni_fails_with_wrong_order/: apache.conf  gnutls-cli.args  test.yaml  test.yml
test/tests/10_basic_client_verification/: apache.conf  gnutls-cli.args  test.yaml
test/tests/10_client_verification/: test.yaml
test/tests/11_client_key_purpose/: apache.conf  test.yaml
test/tests/11_long_client_cert_chain/: apache.conf  hooks.py
test/tests/12_cgi_variables/: apache.conf  gnutls-cli.args  input  output  test.yaml  test.yml
test/tests/13_cgi_variables_no_client_cert/: apache.conf  input  output  test.yaml
test/tests/14_basic_openpgp/: apache.conf  gnutls-cli.args
test/tests/14_resume_session/: apache.conf  gnutls-cli.args  hooks.py  output  test.yml
test/tests/15_basic_msva/: apache.conf  hooks.py  output  test.yaml
test/tests/16_view-status/: apache.conf  gnutls-cli.args  hooks.py  input  output  test.yml
test/tests/17_cgi_vars_large_cert/: apache.conf  gnutls-cli.args  input  output  test.yaml
test/tests/18_client_verification_wrong_cert/: apache.conf  gnutls-cli.args  output  test.yaml
test/tests/19_TLS_reverse_proxy/: apache.conf  backend.conf  output
test/tests/20_TLS_reverse_proxy_client_auth/: apache.conf  backend.conf
test/tests/21_TLS_reverse_proxy_wrong_cert/: apache.conf  backend.conf  input  output  test.yaml  test.yml
test/tests/22_TLS_reverse_proxy_crl_revoke/: apache.conf  backend.conf
test/tests/23_TLS_reverse_proxy_mismatched_priorities/: apache.conf  backend.conf  test.yml
test/tests/24_pkcs11_cert/: apache.conf  hooks.py  softhsm.conf.in
test/tests/25_Disable_TLS_1.0/: apache.conf  gnutls-cli.args  test.yaml
test/tests/26_HTTPS_server_var/: apache.conf
test/tests/26_redirect_HTTP_to_HTTPS/: apache.conf  test.yml
test/tests/27_OCSP_server/: apache.conf  gnutls-cli.args  hooks.py  ocsp.conf  test.yml
test/tests/28_HTTP2_support/: apache.conf  hooks.py
test/tests/29_OCSP_server_no_async/: apache.conf  hooks.py  test.yaml
test/tests/29_force_handshake_vhost/: apache.conf  input  output  test.yml
test/tests/30_ip_based_vhosts/: apache.conf  hooks.py  input  output  test.yaml
test/tests/31_vhost_SNI_serveralias_match/: apache.conf  input  test.yaml  test.yml
test/tests/32_vhost_SNI_serveralias_mismatch/: apache.conf  input  output  test.yaml
test/tests/33_vhost_SNI_serveralias_missinghost/: gnutls-cli.args  input  output  test.yml
test/tests/34_TLS_reverse_proxy_h2/: apache.conf  backend.conf  hooks.py  input  output  test.yaml
test/tests/35_client_reauth/: apache.conf  test.yaml  test.yml
test/tests/36_OCSP_server_nonce/: apache.conf  hooks.py  ocsp.conf  test.yml
test/tests/37_TLS_reverse_proxy_resume_session/: apache.conf  backend.conf  hooks.py  test.yml
(+99 files in other folders)
