option('gnutls-debug-log', type: 'boolean', value: false,
       description: 'Write GnuTLS debug output to /tmp/gnutls_debug, for debugging only!')
option('pdf-doc', type: 'boolean', value: true,
       description: 'build PDF documentation')
option('apxs-bin', type: 'string', value: 'apxs', description: 'path to apxs')

option('test-host', type: 'string', value: 'localhost',
       description: 'server hostname to use in tests, must resolve to test-ips')
option('test-ips', type: 'array', value: ['[::1]', '127.0.0.1'],
       description: 'server addresses to use in tests')
option('valgrind-test', type: 'boolean', value: false,
       description: 'if enabled, server instances in tests run under valgrind')

# Maybe port these:
# --with-gnutls-dev=DIR   Use GnuTLS libraries from a development (git) tree.
# SOFTHSM_LIB Absolute path of the SoftHSM PKCS #11 module to use. By default
#             the test suite will search common library paths.
# --disable-flock         Disable use of flock during tests (some exotic
#                         architectures don't support it)
# --disable-test-namespaces
#                         Disable use of namespaces for tests (limits
#                         parallelization)

# Drop entirely: SRP, MSVA
